tests/negative/generics/const_fn_mismatch_ret.orng
// const_fn_mismatch_ret.orng:10:14: error: expected a value of type `Char`, got a value of type `Int`
//     template(4)
//             ^
// 
fn template(const n: Int) -> Int {
    n + 4
}

fn main() -> Char {
    template(4)
}
